# amk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CMakelists.txt  LICENSE  Makefile  README.md  common.mk  noah.jdebug  r.sh  run.sh
keyboards/: CMakeLists.txt  CMakelists.txt  main.c
keyboards/8xv2/: 8xv2.c  8xv2.h  8xv2.mk  8xv2_keymap.c  config.h  vial.json  vial_generated_keyboard_definition.h
keyboards/8xv2_hs/: 8xv2_hs.c  8xv2_hs.h  8xv2_hs.mk  8xv2_hs_keymap.c  config.h  port_matrix.c  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/8xv3/: 8xv3.c  8xv3.h  8xv3.mk  8xv3_gcmap.c  8xv3_keymap.c  cm2.c  config.h  custom_matrix.c  display.c  ds2.c  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/8xv3_ec/: 8xv3_ec.c  8xv3_ec.h  8xv3_ec.mk  8xv3_ec_gcmap.c  8xv3_ec_keymap.c  STM32F446RETx_FLASH.ld  apc_matrix.c  config.h  display.c  ec_matrix.c  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/8xv3_rabbit/: 8xv3_rabbit.c  8xv3_rabbit.h  8xv3_rabbit.js  8xv3_rabbit.mk  8xv3_rabbit_keymap.c  cm2.c  config.h
keyboards/abelx_ble/: abelx_ble.c  abelx_ble.h  abelx_ble.mk  abelx_ble_keymap.c  abelx_ble_matrix.c  config.h
keyboards/abelx_hs/: abelx_hs.c  abelx_hs.h  abelx_hs.mk  abelx_hs_keymap.c  config.h
keyboards/add_hs/: add_hs.c
keyboards/controller/: config.h  controller.c  controller.h  controller.mk  controller_keymap.c  controller_matrix.c
keyboards/corsa/: cm2.c  config.h  corsa.c  corsa.h  corsa.mk  corsa_keymap.c  display.c  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/corsa_8k/: config.h  corsa_8k.c  corsa_8k.h  corsa_8k.mk  corsa_8k_keymap.c  vial.json  vial_generated_keyboard_definition.h
keyboards/corsa_ec/: apc_matrix.c  config.h  corsa_ec.c  corsa_ec.h  corsa_ec.mk  corsa_ec_keymap.c  display.c  ec_matrix.c  vial.json  vial_generated_keyboard_definition.h
keyboards/des_19/: STM32L432KBUx_FLASH.ld  config.h  des_19.c  des_19.h  des_19.mk  des_19_gcmap.c  des_19_keymap.c  ec_matrix.c  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/des_60/: STM32G431CBTx_FLASH.ld  config.h  custom_matrix.c  des_60.c  des_60.h  des_60.mk  des_60_keymap.c  ec_matrix.c  hhkb_des.c  hhkb_des.h  hhkb_des.mk  hhkb_des_gcmap.c  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/falcon/: config.h  falcon.c  falcon.cmake  falcon.h  falcon.mk  falcon_action.c  falcon_keymap.c
keyboards/falcon_8k/: config.h  falcon_8k.c  falcon_8k.h  falcon_8k.mk  falcon_8k_keymap.c  vial.json  vial_generated_keyboard_definition.h
keyboards/falcon_ec/: config.h  custom_matrix.c  ec_matrix.c  falcon_ec.c  falcon_ec.h  falcon_ec.mk  falcon_ec_actionmap.c  falcon_ec_gcmap.c  falcon_ec_keymap.c  vial.json  vial_generated_keyboard_definition.h
keyboards/falcon_test/: config.h  falcon_test_keymap.c  hhkbble.c  hhkbble.mk  hhkbble_action.c
keyboards/faukwaa/: STM32F405RGTx_FLASH.ld  config.h  faukwaa.c  faukwaa.h  faukwaa.mk  faukwaa_keymap.c  faukwaa_rgb.c  vial.json  vial_generated_keyboard_definition.h
keyboards/hhkbble/: config.h  hhkbble.c  hhkbble.h  hhkbble.mk  hhkbble_action.c  hhkbble_keymap.c
keyboards/hhkbusb/: config.h  display.c  hhkb_matrix.c  hhkb_matrix.c.old  hhkbusb.c  hhkbusb.h  hhkbusb.mk  hhkbusb_keymap.c  ring_buffer.c  ring_buffer.h  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/imp_ec/: STM32F411CEUx_FLASH.ld  config.h  custom_matrix.c  imp_ec.c  imp_ec.h  imp_ec.mk  imp_ec_actionmap.c  imp_ec_gcmap.c  imp_ec_keymap.c  vial.json  vial_generated_keyboard_definition.h
keyboards/m20add/: config.h  m20add.h  m20add.mk
keyboards/m20add_ble/: config.h  m20add_ble.c  m20add_ble.h  m20add_ble.mk  m20add_ble_keymap.c  m20add_ble_matrix.c
keyboards/m20add_hs/: add_hs.c  add_hs.h  add_hs.mk  add_hs_keymap.c  config.h  m20add_hs.c  m20add_hs.h  m20add_hs.mk  m20add_hs_keymap.c
keyboards/m20addble/: config.h  m20add.c  m20addble.c  m20addble.h  m20addble.mk  m20addble_keymap.c
keyboards/m20ble/: config.h  m20ble.c  m20ble.h  m20ble_keymap.c  m20ble_matrix.c
keyboards/m65/: STM32F722RETx_FLASH.ld  config.h  def_font.h  lvgl_def.h  m65.c  m65.cmake  m65.h  m65.mk  m65_actionmap.c  m65_keymap.c  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/m65_v2/: config.h  display.c  m65.c  m65.c.old  m65.h  m65_actionmap.c  m65_full.c  m65_gcmap.c  m65_keymap.c  m65_v2.mk  tusb_def.h  vial.json
keyboards/m65ble/: config.h  m65_ble_keymap.c  m65ble.c  m65ble.h  m65ble.mk
keyboards/me_ec/: config.h  custom_matrix.c  ec_matrix.c  me_ec.c  me_ec.h  me_ec.mk  me_ec_gcmap.c  me_ec_keymap.c  tusb_def.h  vial.json  vial_generated_keyboard_definition.h
keyboards/meta/: config.h  (+9 more)
main/: CMakeLists.txt  amk_boot.c  amk_boot.h  amk_bootmagic.c  amk_bootmagic.h  amk_config.h  amk_error.h  amk_keymap.c  amk_keymap.h  amk_printf.c  amk_printf.h  board.h  custom_action.c  custom_action.h  eeconfig_fram.c  eeconfig_mem.c  eeprom_manager.c  eeprom_manager.h  feature.cmake  feature.mk  flash_store.h  gpio_pin.h  keymap.c  main.c  main.mk  matrix.c  matrix_driver.c  matrix_driver.h  matrix_i2c.c  matrix_i2c.h  matrix_scan.c  matrix_scan.h  nrf52kbd.c  report_queue.c  report_queue.h  rgb_driver.c  rgb_effects.c  rgb_effects.h  suspend.c  tusb_def.h  (+6 more)
nrf5_sdk/: 52840.jdebug  CMakeLists.txt  custom_board.h  nrf5.mk  nrf5_sdk.mk  sdk_config.bat  sdk_config.h  sdk_config.h.amk  sdk_config.h.old
sdk_nrf5/: CMakeLists.txt  dcd_nrf5x.c  nrf52832.ld  nrf52840.ld  nrf5_sdk.mk  sdk_config.bat  sdk_config.h
stm32_sdk/: .mxproject  405.jdebug  405.jflash  CMakeLists.txt  Makefile  STM32F722RETx_FLASH.ld  STM32L433RCTx_FLASH.ld  f103.jdebug  f103_sdk.mk  f1_sdk.mk  f405_sdk.mk  f411_sdk.mk  f4_sdk.mk  f4_usb.mk  f7_sdk.mk  hal_usb.mk  l4_sdk.mk  stm32_sdk.mk  stm32f411xe.ld  stm32f4xx_hal_conf.h  usb411.ioc  usb_f103.ioc  usb_f405.ioc  usb_f411.ioc  usb_f722.ioc
tinyusb/: CMakeLists.txt  CMakeLists.txt.old  CMakelists.txt  tinyusb.mk  tusb_config.h
tmk/: CMakeLists.txt  config.h  tmk.mk  wait_api.h
(+1457 files in other folders)
