cmake_minimum_required(VERSION 3.15)

project(astro
      VERSION 0.0.1
      DESCRIPTION "Keyboard firmware"
      LANGUAGES C ASM)

set(SDK_ROOT "nrf5_sdk/nRF5_SDK_17.0.0_9d13099")
set(TMK_DIR "tmk")
set(TINYUSB_DIR "tinyusb")
set(KBD_DIR "keyboards")
set(MAIN_DIR "main")

add_executable(amk "")

set_target_properties(
    amk 
    PROPERTIES 
        SUFFIX ".elf"
    )

target_sources(amk
    PRIVATE
    ${SDK_ROOT}/modules/nrfx/mdk/gcc_startup_nrf52.S
    ${SDK_ROOT}/components/libraries/log/src/nrf_log_backend_rtt.c
    ${SDK_ROOT}/components/libraries/log/src/nrf_log_backend_serial.c
    ${SDK_ROOT}/components/libraries/log/src/nrf_log_default_backends.c
    ${SDK_ROOT}/components/libraries/log/src/nrf_log_frontend.c
    ${SDK_ROOT}/components/libraries/log/src/nrf_log_str_formatter.c
    ${SDK_ROOT}/components/libraries/util/app_error.c
    ${SDK_ROOT}/components/libraries/util/app_error_handler_gcc.c
    ${SDK_ROOT}/components/libraries/util/app_error_weak.c
    ${SDK_ROOT}/components/libraries/scheduler/app_scheduler.c
    ${SDK_ROOT}/components/libraries/timer/app_timer2.c
    ${SDK_ROOT}/components/libraries/fifo/app_fifo.c
    ${SDK_ROOT}/components/libraries/uart/app_uart_fifo.c
    ${SDK_ROOT}/components/libraries/util/app_util_platform.c
    ${SDK_ROOT}/components/libraries/crc16/crc16.c
    ${SDK_ROOT}/components/libraries/timer/drv_rtc.c
    ${SDK_ROOT}/components/libraries/fds/fds.c
    ${SDK_ROOT}/components/libraries/hardfault/hardfault_implementation.c
    ${SDK_ROOT}/components/libraries/util/nrf_assert.c
    ${SDK_ROOT}/components/libraries/atomic_fifo/nrf_atfifo.c
    ${SDK_ROOT}/components/libraries/atomic_flags/nrf_atflags.c
    ${SDK_ROOT}/components/libraries/atomic/nrf_atomic.c
    ${SDK_ROOT}/components/libraries/balloc/nrf_balloc.c
    ${SDK_ROOT}/external/fprintf/nrf_fprintf.c
    ${SDK_ROOT}/external/fprintf/nrf_fprintf_format.c
    ${SDK_ROOT}/components/libraries/fstorage/nrf_fstorage.c
    ${SDK_ROOT}/components/libraries/fstorage/nrf_fstorage_sd.c
    ${SDK_ROOT}/components/libraries/memobj/nrf_memobj.c
    ${SDK_ROOT}/components/libraries/pwr_mgmt/nrf_pwr_mgmt.c
    ${SDK_ROOT}/components/libraries/ringbuf/nrf_ringbuf.c
    ${SDK_ROOT}/components/libraries/experimental_section_vars/nrf_section_iter.c
    ${SDK_ROOT}/components/libraries/sortlist/nrf_sortlist.c
    ${SDK_ROOT}/components/libraries/strerror/nrf_strerror.c
    ${SDK_ROOT}/modules/nrfx/mdk/system_nrf52.c
    ${SDK_ROOT}/components/boards/boards.c
    ${SDK_ROOT}/integration/nrfx/legacy/nrf_drv_clock.c
    ${SDK_ROOT}/integration/nrfx/legacy/nrf_drv_uart.c
    ${SDK_ROOT}/modules/nrfx/soc/nrfx_atomic.c
    ${SDK_ROOT}/modules/nrfx/drivers/src/nrfx_clock.c
    ${SDK_ROOT}/modules/nrfx/drivers/src/nrfx_saadc.c
    ${SDK_ROOT}/modules/nrfx/drivers/src/nrfx_gpiote.c
    ${SDK_ROOT}/modules/nrfx/drivers/src/prs/nrfx_prs.c
    ${SDK_ROOT}/modules/nrfx/drivers/src/nrfx_uart.c
    ${SDK_ROOT}/modules/nrfx/drivers/src/nrfx_uarte.c
    ${SDK_ROOT}/external/segger_rtt/SEGGER_RTT.c
    ${SDK_ROOT}/external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c
    ${SDK_ROOT}/external/segger_rtt/SEGGER_RTT_printf.c
    ${SDK_ROOT}/components/ble/ble_advertising/ble_advertising.c
    ${SDK_ROOT}/components/ble/ble_link_ctx_manager/ble_link_ctx_manager.c
    ${SDK_ROOT}/components/ble/common/ble_advdata.c
    ${SDK_ROOT}/components/ble/common/ble_conn_params.c
    ${SDK_ROOT}/components/ble/common/ble_conn_state.c
    ${SDK_ROOT}/components/ble/common/ble_srv_common.c
    ${SDK_ROOT}/components/ble/nrf_ble_gatt/nrf_ble_gatt.c
    ${SDK_ROOT}/components/ble/nrf_ble_qwr/nrf_ble_qwr.c
    ${SDK_ROOT}/components/ble/peer_manager/auth_status_tracker.c
    ${SDK_ROOT}/components/ble/peer_manager/gatt_cache_manager.c
    ${SDK_ROOT}/components/ble/peer_manager/gatts_cache_manager.c
    ${SDK_ROOT}/components/ble/peer_manager/id_manager.c
    ${SDK_ROOT}/components/ble/peer_manager/peer_data_storage.c
    ${SDK_ROOT}/components/ble/peer_manager/peer_database.c
    ${SDK_ROOT}/components/ble/peer_manager/peer_id.c
    ${SDK_ROOT}/components/ble/peer_manager/peer_manager.c
    ${SDK_ROOT}/components/ble/peer_manager/peer_manager_handler.c
    ${SDK_ROOT}/components/ble/peer_manager/pm_buffer.c
    ${SDK_ROOT}/components/ble/peer_manager/security_dispatcher.c
    ${SDK_ROOT}/components/ble/peer_manager/security_manager.c
    ${SDK_ROOT}/external/utf_converter/utf.c
    ${SDK_ROOT}/components/ble/ble_services/ble_bas/ble_bas.c
    ${SDK_ROOT}/components/ble/ble_services/ble_dis/ble_dis.c
    ${SDK_ROOT}/components/ble/ble_services/ble_hids/ble_hids.c
    ${SDK_ROOT}/components/softdevice/common/nrf_sdh.c
    ${SDK_ROOT}/components/softdevice/common/nrf_sdh_ble.c
    ${SDK_ROOT}/components/softdevice/common/nrf_sdh_soc.c
    ${TMK_DIR}/tmk/tmk_core/common/host.c
    ${TMK_DIR}/tmk/tmk_core/common/keyboard.c
    ${TMK_DIR}/tmk/tmk_core/common/matrix.c
    ${TMK_DIR}/tmk/tmk_core/common/action.c
    ${TMK_DIR}/tmk/tmk_core/common/action_tapping.c
    ${TMK_DIR}/tmk/tmk_core/common/action_macro.c
    ${TMK_DIR}/tmk/tmk_core/common/action_layer.c
    ${TMK_DIR}/tmk/tmk_core/common/action_util.c
    ${TMK_DIR}/tmk/tmk_core/common/print.c
    ${TMK_DIR}/tmk/tmk_core/common/debug.c
    ${TMK_DIR}/tmk/tmk_core/common/util.c
    ${TMK_DIR}/tmk/tmk_core/common/hook.c
    ${TMK_DIR}/tmk/tmk_core/common/keymap.c
    ${TMK_DIR}/tmk/tmk_core/common/bootmagic.c
    ${TMK_DIR}/tmk/tmk_core/common/mousekey.c
    ${MAIN_DIR}/main.c
    ${MAIN_DIR}/matrix_driver.c
    ${MAIN_DIR}/suspend.c
    ${MAIN_DIR}/xprintf.c
    ${MAIN_DIR}/porting/nrf52/timer.c
    ${MAIN_DIR}/porting/nrf52/bootloader.c
    ${MAIN_DIR}/porting/nrf52/gpio_pin.c
    ${MAIN_DIR}/porting/nrf52/wait.c
    ${MAIN_DIR}/porting/nrf52/eeconfig_fds.c
    ${MAIN_DIR}/porting/nrf52/ble/ble_adv_service.c
    ${MAIN_DIR}/porting/nrf52/ble/ble_bas_service.c
    ${MAIN_DIR}/porting/nrf52/ble/ble_hids_service.c
    ${MAIN_DIR}/porting/nrf52/ble/ble_services.c
    ${MAIN_DIR}/porting/nrf52/nrf52832.c
    ${MAIN_DIR}/porting/nrf52/ble_keyboard.c
    ${MAIN_DIR}/porting/nrf52/usb_backend_uart.c
    ${KBD_DIR}/hhkbble/hhkbble.c
    )

target_include_directories(amk
    PRIVATE
    ${SDK_ROOT}/components/ble/ble_services/ble_ancs_c
    ${SDK_ROOT}/components/ble/ble_services/ble_ias_c
    ${SDK_ROOT}/components/libraries/pwm
    ${SDK_ROOT}/components/softdevice/s132/headers/nrf52
    ${SDK_ROOT}/modules/nrfx/hal
    ${SDK_ROOT}/components/libraries/log
    ${SDK_ROOT}/components/ble/ble_services/ble_gls
    ${SDK_ROOT}/components/libraries/fstorage
    ${SDK_ROOT}/components/libraries/mutex
    ${SDK_ROOT}/components/libraries/gpiote
    ${SDK_ROOT}/components/libraries/bootloader/ble_dfu
    ${SDK_ROOT}/components/boards
    ${SDK_ROOT}/components/ble/ble_advertising
    ${SDK_ROOT}/external/utf_converter
    ${SDK_ROOT}/components/ble/ble_services/ble_bas_c
    ${SDK_ROOT}/modules/nrfx/drivers/include
    ${SDK_ROOT}/components/libraries/experimental_task_manager
    ${SDK_ROOT}/components/ble/ble_services/ble_hrs_c
    ${SDK_ROOT}/components/libraries/queue
    ${SDK_ROOT}/components/libraries/pwr_mgmt
    ${SDK_ROOT}/components/ble/ble_dtm
    ${SDK_ROOT}/components/toolchain/cmsis/include
    ${SDK_ROOT}/components/ble/ble_services/ble_rscs_c
    ${SDK_ROOT}/components/ble/common
    ${SDK_ROOT}/components/ble/ble_services/ble_lls
    ${SDK_ROOT}/components/libraries/bsp
    ${SDK_ROOT}/components/ble/ble_services/ble_bas
    ${SDK_ROOT}/components/libraries/mpu
    ${SDK_ROOT}/components/libraries/experimental_section_vars
    ${SDK_ROOT}/components/softdevice/s132/headers
    ${SDK_ROOT}/components/ble/ble_services/ble_ans_c
    ${SDK_ROOT}/components/libraries/slip
    ${SDK_ROOT}/components/libraries/delay
    ${SDK_ROOT}/components/libraries/csense_drv
    ${SDK_ROOT}/components/libraries/memobj
    ${SDK_ROOT}/components/ble/ble_services/ble_nus_c
    ${SDK_ROOT}/components/softdevice/common
    ${SDK_ROOT}/components/ble/ble_services/ble_ias
    ${SDK_ROOT}/components/libraries/usbd/class/hid/mouse
    ${SDK_ROOT}/components/libraries/low_power_pwm
    ${SDK_ROOT}/components/ble/ble_services/ble_dfu
    ${SDK_ROOT}/external/fprintf
    ${SDK_ROOT}/components/libraries/svc
    ${SDK_ROOT}/components/libraries/atomic
    ${SDK_ROOT}/components
    ${SDK_ROOT}/components/libraries/scheduler
    ${SDK_ROOT}/components/libraries/cli
    ${SDK_ROOT}/components/ble/ble_services/ble_lbs
    ${SDK_ROOT}/components/ble/ble_services/ble_hts
    ${SDK_ROOT}/components/ble/ble_services/ble_cts_c
    ${SDK_ROOT}/components/libraries/crc16
    ${SDK_ROOT}/components/libraries/util
    ${SDK_ROOT}/components/libraries/usbd/class/cdc
    ${SDK_ROOT}/components/libraries/csense
    ${SDK_ROOT}/components/libraries/balloc
    ${SDK_ROOT}/components/libraries/ecc
    ${SDK_ROOT}/components/libraries/hardfault
    ${SDK_ROOT}/components/ble/ble_services/ble_cscs
    ${SDK_ROOT}/components/libraries/hci
    ${SDK_ROOT}/components/libraries/usbd/class/hid/kbd
    ${SDK_ROOT}/components/libraries/timer
    ${SDK_ROOT}/components/libraries/uart
    ${SDK_ROOT}/components/libraries/fifo
    ${SDK_ROOT}/integration/nrfx
    ${SDK_ROOT}/components/libraries/sortlist
    ${SDK_ROOT}/components/libraries/spi_mngr
    ${SDK_ROOT}/components/libraries/led_softblink
    ${SDK_ROOT}/components/libraries/sdcard
    ${SDK_ROOT}/modules/nrfx/mdk
    ${SDK_ROOT}/components/ble/ble_link_ctx_manager
    ${SDK_ROOT}/components/ble/ble_services/ble_nus
    ${SDK_ROOT}/components/libraries/twi_mngr
    ${SDK_ROOT}/components/ble/ble_services/ble_hids
    ${SDK_ROOT}/components/libraries/strerror
    ${SDK_ROOT}/components/libraries/crc32
    ${SDK_ROOT}/components/libraries/usbd/class/audio
    ${SDK_ROOT}/components/libraries/sensorsim
    ${SDK_ROOT}/components/ble/peer_manager
    ${SDK_ROOT}/components/libraries/mem_manager
    ${SDK_ROOT}/components/libraries/ringbuf
    ${SDK_ROOT}/components/ble/ble_services/ble_tps
    ${SDK_ROOT}/components/ble/ble_services/ble_dis
    ${SDK_ROOT}/components/ble/nrf_ble_gatt
    ${SDK_ROOT}/components/ble/nrf_ble_qwr
    ${SDK_ROOT}/components/libraries/gfx
    ${SDK_ROOT}/components/libraries/button
    ${SDK_ROOT}/modules/nrfx
    ${SDK_ROOT}/components/libraries/twi_sensor
    ${SDK_ROOT}/integration/nrfx/legacy
    ${SDK_ROOT}/components/libraries/usbd
    ${SDK_ROOT}/external/segger_rtt
    ${SDK_ROOT}/components/libraries/atomic_fifo
    ${SDK_ROOT}/components/ble/ble_services/ble_lbs_c
    ${SDK_ROOT}/components/libraries/crypto
    ${SDK_ROOT}/components/ble/ble_racp
    ${SDK_ROOT}/components/libraries/fds
    ${SDK_ROOT}/components/libraries/atomic_flags
    ${SDK_ROOT}/components/ble/ble_services/ble_hrs
    ${SDK_ROOT}/components/ble/ble_services/ble_rscs
    ${SDK_ROOT}/components/libraries/stack_guard
    ${SDK_ROOT}/components/libraries/log/src
    ${SDK_ROOT}/..
    ${TMK_DIR}
    ${TMK_DIR}/tmk/tmk_core/common
    ${TINYUSB_DIR}
    ${TINYUSB_DIR}/tinyusb/src
    ${KBD_DIR}/hhkbble
    ${MAIN_DIR}
    ${MAIN_DIR}/porting
    ${MAIN_DIR}/porting/nrf52
    ${MAIN_DIR}/porting/nrf52/ble
    )

target_compile_definitions(amk
    PUBLIC
        MCU_NRF5X
        MATRIX_USE_GPIO
        BOOTMAGIC_ENABLE
        MOUSEKEY_ENABLE
        EXTRAKEY_ENABLE
        APP_UART
        APP_TIMER_V2
        APP_TIMER_V2_RTC1_ENABLED
        BOARD_CUSTOM
        CONFIG_NFCT_PINS_AS_GPIOS
        FLOAT_ABI_HARD
        NRF52
        NRF52832_XXAA
        NRF52_PAN_74
        NRF_SD_BLE_API_VERSION=7
        S132
        SOFTDEVICE_PRESENT
        __HEAP_SIZE=8192
        __STACK_SIZE=8192
    )

target_compile_options(amk
    PUBLIC   
        -include config.h
    )

set(NRF5_MDK_PATH "${CMAKE_CURRENT_LIST_DIR}/${SDK_ROOT}/modules/nrfx/mdk")
target_link_options(amk PRIVATE "-L${NRF5_MDK_PATH}" "-T${CMAKE_CURRENT_LIST_DIR}/nrf5_sdk/nrf52832.ld")