
set(NRF5_SDK_PATH "nRF5_SDK_17.0.0_9d13099")
#set(NRF5_SDK_PATH "nRF5_SDK_16.0.0_98a08e2")

add_library(nrf5_sdk STATIC "")
target_sources(nrf5_sdk
    PRIVATE
        ${NRF5_SDK_PATH}/components/libraries/atomic/nrf_atomic.c
        ${NRF5_SDK_PATH}/components/libraries/atomic_fifo/nrf_atfifo.c
        ${NRF5_SDK_PATH}/components/libraries/atomic_flags/nrf_atflags.c
        ${NRF5_SDK_PATH}/components/libraries/balloc/nrf_balloc.c
        ${NRF5_SDK_PATH}/components/libraries/crc16/crc16.c
        ${NRF5_SDK_PATH}/components/libraries/experimental_section_vars/nrf_section_iter.c
        ${NRF5_SDK_PATH}/components/libraries/fds/fds.c
        ${NRF5_SDK_PATH}/components/libraries/fstorage/nrf_fstorage.c
        ${NRF5_SDK_PATH}/components/libraries/fstorage/nrf_fstorage_sd.c
        ${NRF5_SDK_PATH}/components/libraries/fifo/app_fifo.c
        ${NRF5_SDK_PATH}/components/libraries/hardfault/hardfault_implementation.c
        ${NRF5_SDK_PATH}/components/libraries/log/src/nrf_log_backend_rtt.c
        ${NRF5_SDK_PATH}/components/libraries/log/src/nrf_log_backend_serial.c
        ${NRF5_SDK_PATH}/components/libraries/log/src/nrf_log_default_backends.c
        ${NRF5_SDK_PATH}/components/libraries/log/src/nrf_log_frontend.c
        ${NRF5_SDK_PATH}/components/libraries/log/src/nrf_log_str_formatter.c
        ${NRF5_SDK_PATH}/components/libraries/memobj/nrf_memobj.c
        ${NRF5_SDK_PATH}/components/libraries/pwr_mgmt/nrf_pwr_mgmt.c
        ${NRF5_SDK_PATH}/components/libraries/queue/nrf_queue.c
        ${NRF5_SDK_PATH}/components/libraries/ringbuf/nrf_ringbuf.c
        ${NRF5_SDK_PATH}/components/libraries/sortlist/nrf_sortlist.c
        ${NRF5_SDK_PATH}/components/libraries/strerror/nrf_strerror.c
        ${NRF5_SDK_PATH}/components/libraries/scheduler/app_scheduler.c
        ${NRF5_SDK_PATH}/components/libraries/timer/app_timer2.c
        ${NRF5_SDK_PATH}/components/libraries/timer/drv_rtc.c
        ${NRF5_SDK_PATH}/components/libraries/util/app_error.c
        ${NRF5_SDK_PATH}/components/libraries/util/app_error_weak.c
        ${NRF5_SDK_PATH}/components/libraries/util/app_error_handler_gcc.c
        ${NRF5_SDK_PATH}/components/libraries/uart/app_uart_fifo.c
        ${NRF5_SDK_PATH}/components/libraries/util/app_util_platform.c
        ${NRF5_SDK_PATH}/components/libraries/util/nrf_assert.c
        ${NRF5_SDK_PATH}/components/ble/ble_advertising/ble_advertising.c
        ${NRF5_SDK_PATH}/components/ble/ble_link_ctx_manager/ble_link_ctx_manager.c
        ${NRF5_SDK_PATH}/components/ble/ble_services/ble_bas/ble_bas.c
        ${NRF5_SDK_PATH}/components/ble/ble_services/ble_dis/ble_dis.c
        ${NRF5_SDK_PATH}/components/ble/ble_services/ble_hids/ble_hids.c
        ${NRF5_SDK_PATH}/components/ble/common/ble_advdata.c
        ${NRF5_SDK_PATH}/components/ble/common/ble_conn_params.c
        ${NRF5_SDK_PATH}/components/ble/common/ble_conn_state.c
        ${NRF5_SDK_PATH}/components/ble/common/ble_srv_common.c
        ${NRF5_SDK_PATH}/components/ble/nrf_ble_gatt/nrf_ble_gatt.c
        ${NRF5_SDK_PATH}/components/ble/nrf_ble_qwr/nrf_ble_qwr.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/auth_status_tracker.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/gatt_cache_manager.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/gatts_cache_manager.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/id_manager.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/peer_data_storage.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/peer_database.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/peer_id.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/peer_manager.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/peer_manager_handler.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/pm_buffer.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/security_dispatcher.c
        ${NRF5_SDK_PATH}/components/ble/peer_manager/security_manager.c
        ${NRF5_SDK_PATH}/components/softdevice/common/nrf_sdh.c
        ${NRF5_SDK_PATH}/components/softdevice/common/nrf_sdh_ble.c
        ${NRF5_SDK_PATH}/components/softdevice/common/nrf_sdh_soc.c
        ${NRF5_SDK_PATH}/integration/nrfx/legacy/nrf_drv_clock.c
        ${NRF5_SDK_PATH}/integration/nrfx/legacy/nrf_drv_uart.c
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src/nrfx_clock.c
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src/nrfx_gpiote.c
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src/nrfx_pwm.c
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src/nrfx_saadc.c
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src/nrfx_twi.c
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src/nrfx_uart.c
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src/nrfx_uarte.c
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src/prs/nrfx_prs.c
        ${NRF5_SDK_PATH}/modules/nrfx/soc/nrfx_atomic.c
        ${NRF5_SDK_PATH}/external/fprintf/nrf_fprintf.c
        ${NRF5_SDK_PATH}/external/fprintf/nrf_fprintf_format.c
        ${NRF5_SDK_PATH}/external/utf_converter/utf.c 
        ${NRF5_SDK_PATH}/external/segger_rtt/SEGGER_RTT.c
        ${NRF5_SDK_PATH}/external/segger_rtt/SEGGER_RTT_printf.c
        ${NRF5_SDK_PATH}/external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c
        #${NRF5_SDK_PATH}/components/libraries/sensorsim/sensorsim.c
        #${NRF5_SDK_PATH}/components/libraries/bsp/bsp.c
        #${NRF5_SDK_PATH}/components/libraries/bsp/bsp_btn_ble.c
        #${NRF5_SDK_PATH}/components/libraries/button/app_button.c
        #${NRF5_SDK_PATH}/components/boards/boards.c
    PUBLIC
        sdk_config.h
        )

if (MCU_TYPE MATCHES "NRF52840")
    target_sources(nrf5_sdk
        PRIVATE
            ${NRF5_SDK_PATH}/modules/nrfx/mdk/system_nrf52840.c 
            ${NRF5_SDK_PATH}/modules/nrfx/mdk/gcc_startup_nrf52840.S)

elseif (MCU_TYPE MATCHES "NRF52832")
    target_sources(nrf5_sdk
        PRIVATE
            ${NRF5_SDK_PATH}/modules/nrfx/mdk/system_nrf52.c 
            ${NRF5_SDK_PATH}/modules/nrfx/mdk/gcc_startup_nrf52.S)
    target_compile_definitions(nrf5_sdk
        PUBLIC
            APP_UART
            APP_TIMER_V2
            APP_TIMER_V2_RTC1_ENABLED
            CONFIG_NFCT_PINS_AS_GPIOS
            FLOAT_ABI_HARD
            NRF52
            NRF52832_XXAA
            NRF52_PAN_74
            NRF_SD_BLE_API_VERSION=7
            S132
            SOFTDEVICE_PRESENT
            __HEAP_SIZE=8192
            __STACK_SIZE=8192
            $<$<STREQUAL:$<UPPER_CASE:${CMAKE_BUILD_TYPE}>,"DEBUG">:DEBUG>
            )
else()
message(ERROR "could not find valid nrf chips")
endif()

target_include_directories(nrf5_sdk
    PUBLIC 
        ${CMAKE_CURRENT_LIST_DIR}
        ${NRF5_SDK_PATH}/modules/nrfx
        ${NRF5_SDK_PATH}/modules/nrfx/mdk
        ${NRF5_SDK_PATH}/modules/nrfx/hal
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/include
        ${NRF5_SDK_PATH}/modules/nrfx/drivers/src
        ${NRF5_SDK_PATH}/integration/nrfx 
        ${NRF5_SDK_PATH}/integration/nrfx/legacy
        ${NRF5_SDK_PATH}/components/toolchain/cmsis/include
        ${NRF5_SDK_PATH}/components/libraries/util
        ${NRF5_SDK_PATH}/components/libraries/fifo
        ${NRF5_SDK_PATH}/components/libraries/atomic
        ${NRF5_SDK_PATH}/components/libraries/atomic_fifo
        ${NRF5_SDK_PATH}/components/libraries/atomic_flags
        ${NRF5_SDK_PATH}/components/libraries/queue
        ${NRF5_SDK_PATH}/components/libraries/cli
        ${NRF5_SDK_PATH}/components/libraries/timer
        ${NRF5_SDK_PATH}/components/libraries/log
        ${NRF5_SDK_PATH}/components/libraries/log/src
        ${NRF5_SDK_PATH}/components/libraries/memobj
        ${NRF5_SDK_PATH}/components/libraries/balloc
        ${NRF5_SDK_PATH}/components/libraries/delay
        ${NRF5_SDK_PATH}/components/libraries/strerror
        ${NRF5_SDK_PATH}/components/libraries/ringbuf
        ${NRF5_SDK_PATH}/components/libraries/sortlist
        ${NRF5_SDK_PATH}/components/libraries/scheduler
        ${NRF5_SDK_PATH}/components/libraries/pwr_mgmt
        ${NRF5_SDK_PATH}/components/libraries/uart
        ${NRF5_SDK_PATH}/components/libraries/mutex
        ${NRF5_SDK_PATH}/components/libraries/fds
        ${NRF5_SDK_PATH}/components/libraries/fstorage
        ${NRF5_SDK_PATH}/components/libraries/experimental_section_vars
        ${NRF5_SDK_PATH}/components/softdevice/common
        ${NRF5_SDK_PATH}/components/softdevice/mbr/headers
        ${NRF5_SDK_PATH}/components/softdevice/s132/headers
        ${NRF5_SDK_PATH}/components/ble/ble_advertising
        ${NRF5_SDK_PATH}/components/ble/common
        ${NRF5_SDK_PATH}/components/ble/ble_dtm
        ${NRF5_SDK_PATH}/components/ble/ble_link_ctx_manager
        ${NRF5_SDK_PATH}/components/ble/ble_racp
        ${NRF5_SDK_PATH}/components/ble/ble_services/ble_bas
        ${NRF5_SDK_PATH}/components/ble/ble_services/ble_bas_c
        ${NRF5_SDK_PATH}/components/ble/ble_services/ble_dis
        ${NRF5_SDK_PATH}/components/ble/ble_services/ble_hids
        ${NRF5_SDK_PATH}/components/ble/nrf_ble_gatt
        ${NRF5_SDK_PATH}/components/ble/nrf_ble_qwr
        ${NRF5_SDK_PATH}/components/ble/peer_manager 
        ${NRF5_SDK_PATH}/components/libraries/sensorsim
        ${NRF5_SDK_PATH}/components/libraries/bsp
        ${NRF5_SDK_PATH}/components/libraries/button
        ${NRF5_SDK_PATH}/components/boards
        ${NRF5_SDK_PATH}/external/segger_rtt
        ${NRF5_SDK_PATH}/external/fprintf)